fix: prevent auto zoom on mobile
- Don't auto zoom when focus hits the textarea

--- a/public/style.css
+++ b/public/style.css
@@ -132,6 +132,12 @@ textarea {
   min-height: 140px;
 }
 
+@media (hover: none) and (pointer: coarse) {
+  textarea {
+    font-size: 16px;
+  }
+}
+
 textarea[readonly] {
   cursor: default;
 }
